Add rate limit to upload profile pic and consolidate user service fail responses
